# gravitational-positivity-bounds

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
eval_harness/: __init__.py  positivity_check.py  positivity_ladder.py
qgse/: __init__.py  conjecture.py  constraints.py  interfaces.py
qgse/verifiers/: __init__.py  _ejtail_reference.py  bootstrap.py  bootstrap_mixed.py  bootstrap_on.py  bootstrap_on_mixed.py  gr.py  gravity_lp.py  gravity_positivity.py  gravity_susy.py  modular.py  modular_spin.py  positivity.py
results/positivity/: REPORT.md  grav_rays.jsonl  ladder.jsonl
results/positivity/ablation/: README.md  ablation_decision_rule.md  ablation_v2.py  (+6 more)
scripts/: verify_e2_family.py  verify_x8_stable.py
shinka_fork/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
shinka_fork/.github/: pull_request_template.md
shinka_fork/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
shinka_fork/.github/workflows/: ci.yml  docs-release.yml  integration.yml  pypi-release.yml
shinka_fork/shinka/: __init__.py  defaults.py  env.py  google_genai.py  launch_hydra.py  local_openai_config.py  logo.py  model_availability.py  release_check.py
shinka_fork/shinka/cli/: launch.py  models.py  run.py  run_config.py
shinka_fork/shinka/configs/: __init__.py  config.yaml
shinka_fork/shinka/configs/cluster/: __init__.py
shinka_fork/shinka/configs/database/: __init__.py  island_medium.yaml
shinka_fork/shinka/configs/evolution/: __init__.py  large_budget.yaml  medium_budget.yaml  small_budget.yaml
shinka_fork/shinka/configs/task/: __init__.py
shinka_fork/shinka/configs/variant/: __init__.py
shinka_fork/shinka/core/: __init__.py  async_runner.py  config.py  judge_gate.py  judge_instrumentation.py  pipeline_timing.py  prompt_evolver.py  runtime_slots.py  sampler.py  wrap_eval.py
shinka_fork/shinka/database/: async_dbase.py  complexity.py  dbase.py  display.py
shinka_fork/shinka/edit/: __init__.py  apply_diff.py  apply_full.py  async_apply.py  marker_validation.py  summary.py
shinka_fork/shinka/embed/: client.py  embedding.py
shinka_fork/shinka/embed/providers/: pricing.csv  pricing.py
shinka_fork/shinka/launch/: __init__.py  local.py  scheduler.py  slurm.py
shinka_fork/shinka/llm/: client.py  constants.py  kwargs.py  llm.py  prioritization.py  query.py
shinka_fork/shinka/llm/providers/: __init__.py  anthropic.py  deepseek.py  gemini.py  headless.py  local_openai.py  model_resolver.py  openai.py  pricing.csv  pricing.py
shinka_fork/shinka/plots/: __init__.py  plot_throughput.py
shinka_fork/shinka/prompts/: prompts_base.py  prompts_cross.py  prompts_diff.py  prompts_init.py  prompts_judge.py  prompts_meta.py
shinka_fork/shinka/utils/: __init__.py  eval_stop.py  general.py  languages.py  load_df.py  utils_hydra.py  wolfram.py
shinka_fork/shinka/webui/: compare.html  index.html  visualization.py  viz_tree.html
shinka_fork/skills/shinka-run/: SKILL.md
shinka_fork/skills/shinka-setup/: SKILL.md
tasks/grav_edge/: evaluate.py  initial.py  run_evo.py
tasks/grav_extu/: evaluate.py  initial.py  run_evo.py
tasks/grav_smear3/: evaluate.py  initial.py  run_evo.py
vendor_sdpb_bin/: mpirun  pmp2sdp  pvm2sdp  sdpb  unisolve
(+98 files in other folders)
